# agg-mia

./: .gitignore  README.md  check_env.py  pyproject.toml  requirements.txt  run_delftblue.sh  submit_delftblue.sh
MIA_Adv/: ReadME.md  perturb.py  submit_delftblue.sh
MIA_Adv/llm_inference/: dataset.py  infer.sh  literals.json
TraWiC/: requirements.txt  run_delftblue.sh
TraWiC/src/: inspector_test.py  main_santacoder.py  run_tests.py
TraWiC/src/checker/: checker.py
TraWiC/src/data/: dataset_builder.py  download_repos.py
TraWiC/src/models/: __init__.py
analysis/1k_all/: unified_metrics.html
datasets/: download_seen.py
ez-mia/: submit_delftblue.sh
ez-mia/mia/: datasets.py  ez_score.py
mias/mia_adv/: entry.sh  requirements.txt
mias/trawic/: README.md  submit_delftblue.sh
mias/trawic/src/: inspector_train.py
mias/trawic/src/data/: dataset.py
mias/trawic/src/models/: santa.py
mias/trawic/tests/: test_checker.py
src/: main.py
src/datasets/: data_loader.py  download_seen.py  download_unseen.py  show_parquet_samples.py
src/mias/: mia_interface.py
src/mias/bow_mia/: bow.py  config.py
src/mias/ez-mia/: README.md  ez_mia_mia.py
src/mias/ez-mia/mia/: __init__.py  config.py
src/mias/ez_mia/: ez.py  ez_mia_mia.py  requirements.txt  run_delftblue.sh
src/mias/ez_mia/mia/: __main__.py  attack.py  metrics.py  models.py
src/mias/loss_mia/: config.py  loss.py
src/mias/mia_adv/: Modified_IDL.md  adv.py  classifier.py  config.py  mia_adv_mia.py  original_readme.md  perturb.py  run_delftblue.sh
src/mias/mia_adv/llm_inference/: run_lm.py
src/mias/mkp_mia/: config.py  mkp.py
src/mias/pac_mia/: config.py  pac.py
src/mias/trawic/: config.py  feature_extractor.py  infill.py  original_readme.md  trawic.py  trawic_mia.py
src/mias/trawic/src/models/: model.py
src/mias/trawic/tests/: __init__.py  test_extract_elements.py
src/models/: loader.py  vllm_backend.py
src/results/: analysis.py  recompute_metrics.py
src/results/scripts/: recompute_metrics.py  unify_metrics.py
