[project]
name = "agg-mia"
version = "0.1.0"
description = "Membership inference attacks for code language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "fuzzywuzzy",
    "huggingface-hub",
    "ninja",
    "numpy",
    "packaging",
    "plotly",
    "psutil",
    "pytest",
    "python-Levenshtein",
    "requests",
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "typing_extensions",
    "vllm",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
