[project]
name = "agg-mia"
version = "0.1.0"
description = "Membership inference attacks for code language models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate",
    "datasets",
    "fuzzywuzzy",
    "huggingface-hub==0.36.2",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "packaging==26.1",
    "plotly",
    "psutil==7.2.2",
    "pytest",
    "python-Levenshtein",
    "requests==2.33.1",
    "scikit-learn",
    "torchaudio==2.9.0+cu128",
    "torch==2.9.0+cu128",
    "torchvision==0.24.0+cu128",
    "transformers==4.57.6",
    "typing_extensions==4.15.0",
    "vllm==0.11.2",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torchaudio = { index = "pytorch-cu128" }
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
